frontend-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-management

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: st-management
  namespace: student-management
spec:
  replicas: 2
  selector:
    matchLabels:
      app: st-management
  template:
    metadata:
      labels:
        app: st-management
    spec:
      containers:
      - name: st-management
        image: nginx:latest
        imagePullPolicy: IfNotPresent   
        volumeMounts:
        - mountPath: /data
          name: my-storage
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
      volumes:
      - name: my-storage
        persistentVolumeClaim:
          claimName: st-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: management-service
  namespace: student-management
spec:
  selector:
    app: st-management
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
